--- a/Features/FindCOLDFeatures.ipynb
+++ b/Features/FindCOLDFeatures.ipynb
@@ -45,11 +45,11 @@
    ],
    "source": [
     "N_RHO_BINS = 7\n",
-    "N_ANGLE_BINS = 12\n",
+    "N_ANGLE_BINS = 14\n",
     "N_BINS = N_RHO_BINS * N_ANGLE_BINS\n",
     "BIN_SIZE = 360 // N_ANGLE_BINS\n",
-    "R_INNER = 5.0\n",
-    "R_OUTER = 35.0\n",
+    "R_INNER = 3.0\n",
+    "R_OUTER = 38.0\n",
     "APPROX_POLY_FACTOR = 0.01\n",
     "K_S = np.arange(3, 8)\n",
     "np.seterr(divide = 'ignore')"
@@ -70,15 +70,19 @@
    ],
    "source": [
     "def get_cold_feature(image):\n",
+    "   # Blur the image\n",
     "\timage = cv2.GaussianBlur(image,(3,3),0)\n",
+    "\t# Convert to grayscale\n",
     "\tbw_image = cv2.threshold(image, 128, 255, cv2.THRESH_BINARY | cv2.THRESH_OTSU)[1]\n",
-    "\n",
+    "\t# Get the contours\n",
     "\tcontours, _= cv2.findContours(\n",
     "\t\t\t\tbw_image, cv2.RETR_TREE, \n",
     "\t\t\t\tcv2.CHAIN_APPROX_NONE\n",
     "\t\t\t\t)\n",
+    "\t# Sort the contours by area\n",
     "\tcontours = sorted(contours, key=cv2.contourArea, reverse=True)[1:]\n",
     "\n",
+    "\t# Setting up the COLD histogram and the final feature vector\n",
     "\trho_bins_edges = np.log10(np.linspace(R_INNER, R_OUTER, N_RHO_BINS))\n",
     "\tfeature_vectors = np.zeros((len(K_S), N_BINS))\n",
     "\n",
@@ -89,15 +93,20 @@
     "\t\t\tcnt = cv2.approxPolyDP(cnt,epsilon,True)\n",
     "\t\t\tn_pixels = len(cnt)\n",
     "\t\t\t\n",
+    "\t\t\t# Getting the two points due to the dominant edges\n",
     "\t\t\tpoint_1s = np.array([point[0] for point in cnt])\n",
     "\t\t\tx1s, y1s = point_1s[:, 0], point_1s[:, 1]\n",
     "\t\t\tpoint_2s = np.array([cnt[(i + k) % n_pixels][0] for i in range(n_pixels)])\n",
     "\t\t\tx2s, y2s = point_2s[:, 0], point_2s[:, 1]\n",
     "\t\t\t\n",
+    "\t\t\t# Getting the angle of the line segment.\n",
     "\t\t\tthetas = np.degrees(np.arctan2(y2s - y1s, x2s - x1s) + np.pi)\n",
+    "\n",
+    "\t\t\t#Getting the length of the line segment\n",
     "\t\t\trhos = np.sqrt((y2s - y1s) ** 2 + (x2s - x1s) ** 2)\n",
     "\t\t\trhos_log_space = np.log10(rhos)\n",
     "\t\t\t\n",
+    "\t\t\t# Updating the Histogram based in the length and angle of the line segment\n",
     "\t\t\tquantized_rhos = np.zeros(rhos.shape, dtype=int)\n",
     "\t\t\tfor i in range(N_RHO_BINS):\n",
     "\t\t\t\tquantized_rhos += (rhos_log_space < rho_bins_edges[i])\n",
@@ -105,6 +114,7 @@
     "\t\t\tfor i, r_bin in enumerate(quantized_rhos):\n",
     "\t\t\t\ttheta_bin = int(thetas[i] // BIN_SIZE) % N_ANGLE_BINS\n",
     "\t\t\t\thist[r_bin - 1, theta_bin] += 1\n",
+    "\t\t\t\t# Normalizing the histogram\n",
     "\t\tnormalised_hist = hist / hist.sum()\n",
     "\t\tfeature_vectors[j] = normalised_hist.flatten()\n",
     "\tfeature_vectors = np.nan_to_num(feature_vectors)\n",
