--- a/Features/FindFractalFeatures.ipynb
+++ b/Features/FindFractalFeatures.ipynb
@@ -84,7 +84,7 @@
    ],
    "source": [
     "# -----------------------------------------------------------------------------\n",
-    "# From https://gist.github.com/viveksck/1110dfca01e4ec2c608515f0d5a5b1d1\n",
+    "# From https://gist.github.com/viveksck/1110dfca01e4ec2c608515f0d5a5b1d1            ## GPL 3.\n",
     "# Applies https://en.wikipedia.org/wiki/Minkowski–Bouligand_dimension:\n",
     "# -----------------------------------------------------------------------------\n",
     "\n",
